--- a/itsfv6/iTSfvGUI/iTSfvGUI.csproj
+++ b/itsfv6/iTSfvGUI/iTSfvGUI.csproj
@@ -150,13 +150,13 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ShareX\HelpersLib\HelpersLib.csproj">
+    <ProjectReference Include="..\..\..\ShareX\ShareX.HelpersLib\ShareX.HelpersLib.csproj">
       <Project>{327750e1-9fb7-4cc3-8aea-9bc42180cad3}</Project>
-      <Name>HelpersLib</Name>
+      <Name>ShareX.HelpersLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\ShareX\UploadersLib\UploadersLib.csproj">
+    <ProjectReference Include="..\..\..\ShareX\ShareX.UploadersLib\ShareX.UploadersLib.csproj">
       <Project>{e1c94415-3424-4517-a2a1-b2fdd1f59c67}</Project>
-      <Name>UploadersLib</Name>
+      <Name>ShareX.UploadersLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\iTSfvLib\iTSfvLib.csproj">
       <Project>{C1D1A1ED-B33E-471F-91FA-4A65C4ADAA75}</Project>
