--- a/itsfv6/iTSfvLib/iTSfvLib.csproj
+++ b/itsfv6/iTSfvLib/iTSfvLib.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Player\XmlDisc.cs" />
     <Compile Include="Player\XmlTrack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\XMLSettings.cs" />
+    <Compile Include="Settings\Settings.cs" />
     <Compile Include="Static\Enums.cs" />
     <Compile Include="Tasks\Task.cs" />
     <Compile Include="Tasks\TaskManager.cs" />
@@ -124,9 +124,9 @@
     <Folder Include="Helpers\Lyrics\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ShareX\HelpersLib\HelpersLib.csproj">
+    <ProjectReference Include="..\..\..\ShareX\ShareX.HelpersLib\ShareX.HelpersLib.csproj">
       <Project>{327750e1-9fb7-4cc3-8aea-9bc42180cad3}</Project>
-      <Name>HelpersLib</Name>
+      <Name>ShareX.HelpersLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
