--- a/itsfv6/packages/repositories.config
+++ b/itsfv6/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\ShareX\ShareX.HelpersLib\packages.config" />
+  <repository path="..\..\..\ShareX\ShareX.UploadersLib\packages.config" />
   <repository path="..\iTSfvCLI\packages.config" />
   <repository path="..\iTSfvGUI\packages.config" />
   <repository path="..\iTSfvLib\packages.config" />
