--- a/itsfv6/iTSfvGUI/iTSfvGUI.csproj
+++ b/itsfv6/iTSfvGUI/iTSfvGUI.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="TaskbarHelper.cs" />
+    <Compile Include="UpdateManager.cs" />
     <Compile Include="Windows\AboutForm.cs">
       <SubType>Form</SubType>
     </Compile>
